# Conductor

./: .gitignore  .npmrc  DEPLOY_VERCEL.md  INSTALL_PNPM.md  README.md  SEEDING.md  docker-compose.yml  package.json  requirements.txt
.cursor/rules/: commit-messages.mdc
api/: index.py
backend/: .env.example  .gitignore  README.md  alembic.ini  app.py  index.py  package.json  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: README.md  env.py
backend/api/: index.py
backend/app/: config.py  database.py  index.py  main.py  supabase_client.py
backend/app/api/: __init__.py  comparison.py  datasets.py  experiments.py  jobs.py  metrics.py  stats.py
backend/app/models/: __init__.py  dataset.py  experiment.py  job.py  metric.py
backend/app/schemas/: __init__.py  api.py  dataset.py  experiment.py  job.py  metric.py
backend/app/services/: training.py
backend/app/utils/: seed_data.py  simulation.py
backend/scripts/: seed.sh
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  (+1 more)
frontend/src/hooks/: useDatasets.ts  useExperiments.ts  useMetrics.ts
frontend/src/pages/: ComparisonPage.tsx  DashboardPage.tsx  DatasetsPage.tsx  ExperimentDetailPage.tsx  ExperimentsPage.tsx  NotFoundPage.tsx
frontend/src/services/: api.ts  mockData.ts
frontend/src/types/: api.ts  dataset.ts  experiment.ts  metric.ts
frontend/src/utils/: constants.ts  formatters.ts
supabase/: schema.sql
(+19 files in other folders)
